tests/ui/g-loop-body-empty.stderr
error[E0432]: unresolved import `hibana::control::resource_kinds`
 --> tests/ui/g-loop-body-empty.rs:3:5
  |
3 |     resource_kinds::{LoopBreakKind, LoopContinueKind},
  |     ^^^^^^^^^^^^^^ could not find `resource_kinds` in `control`

error[E0107]: type alias takes at most 3 generic arguments but 4 generic arguments were supplied
  --> tests/ui/g-loop-body-empty.rs:24:21
   |
24 |   type LoopBreakArm = LoopBreakSteps<
   |                       ^^^^^^^^^^^^^^ expected at most 3 generic arguments
...
31 |       >,
   |  ______-
32 | |     StepNil,
   | |___________- help: remove the unnecessary generic argument
   |
note: type alias defined here, with at most 3 generic parameters: `Controller`, `BreakMsg`, `Tail`
  --> src/global/program.rs
   |
   | pub type LoopBreakSteps<Controller, BreakMsg, Tail = StepNil> =
   |          ^^^^^^^^^^^^^^ ----------  --------  --------------

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-body-empty.rs:52:54
   |
52 |   const CONTINUE_ARM: g::Program<LoopContinueArm> = g::send::<
   |                                                        ^^^^ expected 4 generic arguments
53 |       Controller,
   |       ----------
54 |       Target,
   |       ------
55 | /     g::Msg<
56 | |         LABEL_LOOP_CONTINUE,
57 | |         GenericCapToken<LoopContinueKind>,
58 | |         CanonicalControl<LoopContinueKind>,
59 | |     >,
   | |_____- supplied 3 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
59 |     >, LANE,
   |      ++++++

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-body-empty.rs:74:8
   |
74 |   > = g::send::<Controller, Target, g::Msg<
   |  ________^^^^___----------__------__-
   | |        |
   | |        expected 4 generic arguments
75 | |     LABEL_LOOP_BREAK,
76 | |     GenericCapToken<LoopBreakKind>,
77 | |     CanonicalControl<LoopBreakKind>,
78 | | >>();
   | |_- supplied 3 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
78 | >, LANE>();
   |  ++++++

error[E0107]: function takes 2 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-body-empty.rs:80:47
   |
80 | const DECISION: g::Program<LoopDecision> = g::route::<0, 1, _>(
   |                                               ^^^^^       --- help: remove the unnecessary generic argument
   |                                               |
   |                                               expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `CONTROLLER`, `Steps`
  --> src/global.rs
   |
   | pub const fn route<const CONTROLLER: u8, Steps>(
   |              ^^^^^ --------------------  -----

error[E0277]: the trait bound `Role<1>: MessageSpec` is not satisfied
  --> tests/ui/g-loop-body-empty.rs:81:25
   |
81 |     g::route_chain::<0, LoopContinueArm>(CONTINUE_ARM)
   |                         ^^^^^^^^^^^^^^^ the trait `MessageSpec` is not implemented for `Role<1>`
   |
   = help: the trait `MessageSpec` is implemented for `Message<L, P, C>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<48>, GenericCapToken<{type error}>, CanonicalControl<{type error}>>>` to implement `hibana::global::steps::RouteArm<0>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0277]: the trait bound `Role<1>: SendableLabel` is not satisfied
  --> tests/ui/g-loop-body-empty.rs:81:25
   |
81 |     g::route_chain::<0, LoopContinueArm>(CONTINUE_ARM)
   |                         ^^^^^^^^^^^^^^^ the trait `SendableLabel` is not implemented for `Role<1>`
   |
   = help: the trait `SendableLabel` is implemented for `Message<LabelMarker<LABEL>, Payload, Control>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<48>, GenericCapToken<{type error}>, CanonicalControl<{type error}>>>` to implement `hibana::global::steps::RouteArm<0>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`
